# StuPidSQL

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: Column.hpp  Command.hpp  Database.hpp  DatabaseManager.hpp  Executor.hpp  IndexManager.hpp  Parser.hpp  RecordManager.hpp  Table.hpp  tools.hpp
src/: Database.cpp  DatabaseManager.cpp  Executor.cpp  IndexManager.cpp  Parser.cpp  RecordManager.cpp  Table.cpp  main.cpp
